# tk_atalaia_magnetic_out_validation

./: .envrc  .gitignore  binaries_requirements.txt  cyclonedds.xml  pyrightconfig.json
ros2_ws/src/tk_atalaia_magnetic_out_validation/: package.xml  setup.cfg  setup.py
ros2_ws/src/tk_atalaia_magnetic_out_validation/config/: rtsp_camera.yaml
ros2_ws/src/tk_atalaia_magnetic_out_validation/launch/: tk_magnetic.launch.py
ros2_ws/tk_binaries/: README.md  current_versions.txt
ros2_ws/tk_binaries/tk_ros2_pkg_atalaia/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ros2_ws/tk_binaries/tk_ros2_pkg_atalaia/configs/: atalaia_config.yaml
ros2_ws/tk_binaries/tk_ros2_pkg_atalaia/launch/: atalaia_launch.py
ros2_ws/tk_binaries/tk_ros2_pkg_atalaia_interface/: CMakeLists.txt  package.xml
ros2_ws/tk_binaries/tk_ros2_pkg_atalaia_interface/msg/: AtalaiaCommand.msg  AtalaiaState.msg
ros2_ws/tk_binaries/tk_ros2_pkg_atalaia_interface/srv/: AllOff.srv  FaultReset.srv  SetColor.srv  SetConfig.srv  SetFan.srv  SetWhite.srv
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/include/tk_ros2_pkg_ethercat_master/: ecat_device_base.hpp  ecat_pdo_types.hpp  ecat_plugin_interface.hpp  ecat_shm.hpp
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/lib/tk_ros2_pkg_ethercat_master/: ecat_daemon_start.sh  ecat_diag.sh  ecat_gate  ecat_rt_daemon  ecat_setup.sh  ecat_teardown.sh
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/share/tk_ros2_pkg_ethercat_master/configs/: ecat_bus.yaml
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/share/tk_ros2_pkg_ethercat_master/kernel_patches/igh_sittner_igb/: README.md
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/share/tk_ros2_pkg_ethercat_master/kernel_patches/igh_sittner_igb/kernel_6.14/: README.md
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/share/tk_ros2_pkg_ethercat_master/kernel_patches/igh_sittner_igb/kernel_6.17/: 0001-igb-6.12-ethercat-rename-del_timer_sync-to-timer_del.patch  0002-igb-6.12-ethercat-rename-from_timer-to-timer_contain.patch  0003-igb-6.12-ethercat-add-notified-arg-to-igb_ndo_fdb_ad.patch  0004-igb-6.12-ethercat-drop-const-from-cyclecounter-read-.patch  README.md  VALIDATED
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master/share/tk_ros2_pkg_ethercat_master/launch/: launch_ecat_ros2.launch.py
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master_interface/: CMakeLists.txt  README.md  package.xml
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master_interface/msg/: EcatDeviceCommand.msg  EcatDeviceCommandBatch.msg  EcatDeviceState.msg  EcatHealth.msg  EcatIsokernelCommand.msg  EcatIsokernelStatus.msg  EcatServoCommand.msg  EcatServoCommandBatch.msg  EcatServoStatus.msg
ros2_ws/tk_binaries/tk_ros2_pkg_ethercat_master_interface/srv/: EcatReadSDO.srv  EcatServoEnable.srv  EcatWriteSDO.srv
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera/: CHANGELOG.md  README.md
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera/configs/: stereo_camera_node.yaml  stereo_camera_node_fast.yaml  stereo_camera_node_rtsp.yaml  stereo_cameras.yaml
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera/launch/: stereocamera_fast_launcher.launch.py  stereocamera_launcher.launch.py
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera/zstd_dicts/: 1920x1080.zstd_dict  1920x1200.zstd_dict  960x600.zstd_dict
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera_interface/: CMakeLists.txt  package.xml
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera_interface/msg/: TkStereoCamMsg.msg
ros2_ws/tk_binaries/tk_ros2_pkg_stereocamera_interface/srv/: FindDeepestZone.srv
ros2_ws/tk_binaries/typings/tk_ros2_pkg_atalaia/utils/: atalaia_codec.pyi  sdo_reader.pyi
ros2_ws/tk_binaries/typings/tk_ros2_pkg_stereocamera/utils/: deepest_zone_srv.pyi  depth_preprocess.pyi  depth_visualization.pyi  frame_tear_detection.pyi  postprocess_pipeline.pyi
