<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tk_ros2_pkg_atalaia</name>
  <version>0.1.0</version>
  <description>ROS2 package for controlling Theker Atalaia Shield v3 EtherCAT lighting modules</description>
  <maintainer email="r.adell@theker.eu">raul</maintainer>
  <license>Proprietary - TK Robotics</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tk_ros2_pkg_ethercat_master_interface</depend>
  <depend>tk_ros2_pkg_atalaia_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
