<?xml version="1.0"?>
<package format="3">
  <name>tk_ros2_pkg_stereocamera_interface</name>
  <version>0.0.1</version>
  <description>Interfaces and combined RGBD message for StereoCameraNode.</description>
  <maintainer email="m.beltran@theker.eu">Miquel Beltran Moncada</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
